--- a/index.html
+++ b/index.html
@@ -97,137 +97,7 @@
         href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;600;700;800&family=Oswald:wght@500;700&display=swap"
         rel="stylesheet">
 
-    <link rel="stylesheet" href="style.css" />
-    <style>
-        /* Homepage Specific Enhancements */
-        .hero-slider {
-            height: 95vh;
-            /* Full screen impact */
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            text-align: center;
-            position: relative;
-            overflow: hidden;
-        }
-
-        .hero-bg {
-            /* PARALLAX EFFECT */
-            background-attachment: fixed;
-            background-position: center;
-            background-repeat: no-repeat;
-            background-size: cover;
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            transform: scale(1.05);
-            /* Slight Zoom for effect */
-            transition: transform 10s ease;
-        }
-
-        /* Hover effect on Hero BG */
-        .hero-slider:hover .hero-bg {
-            transform: scale(1.1);
-        }
-
-        .hero-overlay {
-            background: linear-gradient(135deg, rgba(15, 106, 54, 0.85) 0%, rgba(0, 0, 0, 0.6) 100%);
-            /* Green to Black Gradient */
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-        }
-
-        .hero-content {
-            position: relative;
-            z-index: 2;
-            color: white;
-            max-width: 900px;
-        }
-
-        .hero-title-main {
-            font-size: 4.5rem;
-            font-weight: 700;
-            line-height: 1.1;
-            margin-bottom: 20px;
-            text-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
-            font-family: 'Oswald', sans-serif;
-        }
-
-        /* Service Cards - Overlap Effect */
-        .services-overlap {
-            margin-top: -80px;
-            position: relative;
-            z-index: 10;
-        }
-
-        .service-card {
-            background: white;
-            padding: 40px 30px;
-            transition: all 0.4s ease;
-            height: 100%;
-            border-bottom: 4px solid var(--stinc-green);
-            border-radius: 8px;
-            box-shadow: 0 15px 40px rgba(0, 0, 0, 0.1);
-        }
-
-        .service-card:hover {
-            transform: translateY(-15px);
-            border-bottom-color: var(--accent-yellow);
-            box-shadow: 0 30px 60px rgba(0, 0, 0, 0.15);
-        }
-
-        .icon-circle {
-            width: 80px;
-            height: 80px;
-            background: rgba(15, 106, 54, 0.1);
-            border-radius: 50%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            margin: 0 auto 20px;
-            transition: all 0.3s ease;
-        }
-
-        .service-card:hover .icon-circle {
-            background: var(--stinc-green);
-        }
-
-        .service-card:hover .service-icon {
-            color: white !important;
-        }
-
-        .service-icon {
-            font-size: 30px;
-            color: var(--stinc-green);
-            transition: color 0.3s ease;
-        }
-
-        /* Split Section Styles */
-        .image-frame {
-            position: relative;
-            overflow: hidden;
-            border-radius: 10px;
-            box-shadow: 20px 20px 0px rgba(15, 106, 54, 0.1);
-            /* Geometric shadow */
-        }
-
-        .image-frame img {
-            transition: transform 0.5s ease;
-        }
-
-        .image-frame:hover img {
-            transform: scale(1.03);
-        }
-
-        .btn-glow:hover {
-            box-shadow: 0 0 20px rgba(255, 215, 0, 0.6);
-        }
-    </style>
+    <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 
 <body>
@@ -542,7 +412,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="script.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 
 </html>
